--- a/localisation/ilg_l_english.yml
+++ b/localisation/ilg_l_english.yml
@@ -1,10 +1,49 @@
 ﻿l_english:
- ILG_inspired_by_wolf:0 "Inspired by the Wolf"
- ILG_inspired_by_wolf_desc:0 "'The Wolf', a close friend and bitter Great War veteran, has schemed for two decades and confides his ideas in you."
- ILG_inspired_by_horse:0 "Inspired by the Horse"
- ILG_inspired_by_horse_desc:0 "A history of business dealings and an extensive network of contacts has given you superior leverage in drafting government contracts."
- ILG_inspired_by_hawk:0 "Inspired by the Hawk"
- ILG_inspired_by_hawk_desc:0 "Your brain is a terrible thing to waste, and you're not about to blunder into the second world war unprepared."
+ PDMN.1.t:0 "Our borders have expanded"
+ PDMN.1.d:0 "Infantry march in the streets of our newly conquered territory while natives look on and wonder what their future might hold."
+ PDMN.1.a:0 "Start recruiting for the next war."
+ PDMN.1.b:0 "We will need their cooperation to rebuild and carry forward."
+ PDMN_ETH.1.t:0 "[ITA.GetNameDef] Invades!"
+ PDMN_ETH.1.d:0 "The forces of Rome once again threaten our land. We are faced with overwhelming odds."
+ PDMN_ETH.1.a:0 "Reach out for peace and pray they are reasonable."
+ PDMN_ETH.1.b:0 "Long. Live. The King."
+ PDMN_ETH.2.t:0 "[ETH.GetNameDef] Surrenders"
+ PDMN_ETH.2.d:0 "The [ETH.GetNameDef] has immediately surrendered to our might."
+ PDMN_ETH.2.a:0 "We will teach them how to be strong like us."
+ PDMN_ETH.2.b:0 "I am not a collector of deserts!"
+ PDMN_ETH.3.t:0 "[ETH.GetNameDef] Defiant"
+ PDMN_ETH.3.d:0 "[ETH.GetNameDef]"
+ PDMN_ETH.3.a:0 "Molto bene!"
+ PDMN_ETH.4.t:0 "[ITA.GetNameDef] Rejects Peace"
+ PDMN_ETH.4.d:0 "Our offer of peace has been rejected. [ITA.GetLeader] desires only to trample us."
+ PDMN_ETH.4.a:0 "[ETH.GetNameDef] has more history than [ITA.Capital.GetName] and will continue to."
+ PDMN_ETH.6.t:0 "[ETH.GetNameDef] Appeals to the League of Nations"
+ PDMN_ETH.6.d:0 "[ETH.GetNameDef] begs the increasingly irrelevant League of Nations for help dealing with [ITA.GetNameDef]. As a sitting member, we can choose to send some aid, but there's nothing forcing us to."
+ PDMN_ETH.6.a:0 "We have our own problems."
+ PDMN_ETH.6.b_manpower:0 "There may be volunteers willing to go."
+ PDMN_ETH.6.b_equipment:0 "Check the warehouses for old equipment we can spare."
+ PDMN_ETH.6.b_ace:0 "Send one of our pilots for hire."
+ PDMN_ETH.6.b_commander:0 "We must defend the League of Nations, or there will be another war."
+ PDMN_ETH.7.t:0 "[From.GetNameDef] Sends Volunteers"
+ PDMN_ETH.7.d:0 "Pale faces have arrived from [From.GetNameDef] in the scorching heat of [ETH.Capital.GetName], volunteers ready to fight."
+ PDMN_ETH.7.a:0 "Such sacrifice for a country they aren't even from!"
+ PDMN_ETH.8.t:0 "[From.GetNameDef] Sends Equipment"
+ PDMN_ETH.8.d:0 "A war cannot be won with determination and blood alone."
+ PDMN_ETH.8.a:0 "Guns!"
+ PDMN_ETH.9.t:0 "[From.GetNameDef] Sends an Ace Pilot"
+ PDMN_ETH.9.d:0 "[From.GetAdjective] pilot Pierre Corriger has arrived in [Root.Capital.GetName], ready to clear the skies above [Root.GetNameDef]."
+ PDMN_ETH.9.a:0 "I hope they sent planes and petrol as well..."
+ PDMN_ETH.10.t:0 "[From.GetNameDef] Sends a Military Leader"
+ PDMN_ETH.10.d:0 "Viking Tamm, a Great War veteran from [SWI.GetNameDef], is one of the most experienced leaders in the world."
+ PDMN_ETH.10.a:0 "This levels the field."
+ ILG_seek_nazis:0 "Appeal to Fascists"
+ ILG_seek_nazis_desc:0 "In a complicated geopolitical climate, one man stands out from the rest. Can his inspiration lead our modest nation to greatness?"
+ ILG_seek_british:0 "Appeal to Democracies"
+ ILG_seek_british_desc:0 "The world's most successful empire still looms large over the globe. The British have the tools and assets to build our society skywards."
+ ILG_seek_soviets:0 "Appeal to Communists"
+ ILG_seek_soviets_desc:0 "As we moved away from the indentured servitude of Feudalism, so too must we now move away from Capitalism. The Communists can help us."
+ ILG_seek_neutrality:0 "Maintain Status Quo"
+ ILG_seek_neutrality_desc:0 "All these loudmouths on the world stage keep telling people to pick a side. Nonsense! We will never be bullied into accepting foreign influences!"
  ILG_third_world_development:0 "Third World Development"
  ILG_third_world_development_2:0 "Third World Development II"
  ILG_third_world_development_desc:0 "The third world is rich in natural resources valuable to war efforts that are ripe for the taking."
@@ -22,3 +61,19 @@
  ILG_resource_oil_2:0 "Survey Petroleum II"
  ILG_resource_oil_2_desc:0 "Survey the land for natural resources and harvest them for the war effort."
  infrastructure_effort_3:0 "Infrastructure Effort III"
+ ILG_dockyard_effort:0 "Dockyard Effort"
+ ILG_dockyard_effort_desc:0 ""
+ ILG_dockyard_effort_2:0 "Dockyard Effort II"
+ ILG_dockyard_effort_2_desc:0 ""
+ ILG_dockyard_effort_3:0 "Dockyard Effort III"
+ ILG_dockyard_effort_3_desc:0 ""
+ ILG_naval_supremacy:0 "Naval Supremacy"
+ ILG_naval_supremacy_desc:0 ""
+ ILG_naval_effort:0 "Naval Effort II"
+ ILG_naval_effort_desc:0 ""
+ ILG_naval_doctrine:0 "Naval Doctrine"
+ ILG_naval_doctrine_desc:0 ""
+ ILG_naval_doctrine_2:0 "Naval Doctrine II"
+ ILG_naval_doctrine_2_desc:0 ""
+ ILG_armor_effort_2:0 "Armor Effort II"
+ ILG_armor_effort_2_desc:0 ""
