--- a/localisation/PDMN_state_names_l_english.yml
+++ b/localisation/PDMN_state_names_l_english.yml
@@ -1,3 +1,10 @@
-l_english:
- STATE_743:0 "District of Colubmia"
+﻿l_english:
+ STATE_743:0 "District of Columbia"
  STATE_744:0 "West Virginia"
+ STATE_745:0 "New Hampshire"
+ STATE_746:0 "Maine"
+ STATE_747:0 "Massachusetts"
+ STATE_748:0 "Conneticut"
+ STATE_749:0 "Vermont"
+ STATE_750:0 "Rhode Island"
+ STATE_751:0 "Delaware"
