--- a/localisation/ilg_l_english.yml
+++ b/localisation/ilg_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ autonomy_us_state:0 "State"
+ autonomy_us_territory:0 "Unincorporated Territory"
  USA_CF_fascism:0 "Christian States"
  USA_CF_fascism_DEF:0 "The Christian States"
  USA_CF_fascism_ADJ:0 "American"
