US puppet tweaking.

--- a/localisation/PDMN_countries_l_english.yml
+++ b/localisation/PDMN_countries_l_english.yml
@@ -647,3 +647,15 @@
  XRI_communism:0 "Commune of Rhode Island"
  XRI_communism_DEF:0 "Commune of Rhode Island"
  XRI_communism_ADJ:0 "Rhode Islander"
+ XME_fascism:0 "Maine"
+ XME_fascism_DEF:0 "Maine"
+ XME_fascism_ADJ:0 "Mainer"
+ XME_democratic:0 "State of Maine"
+ XME_democratic_DEF:0 "State of Maine"
+ XME_democratic_ADJ:0 "Mainer"
+ XME_neutrality:0 "Maine"
+ XME_neutrality_DEF:0 "Maine"
+ XME_neutrality_ADJ:0 "Mainer"
+ XME_communism:0 "Collectivist Maine"
+ XME_communism_DEF:0 "Collectivist Maine"
+ XME_communism_ADJ:0 "Mainer"
