--- a/localisation/ilg_l_english.yml
+++ b/localisation/ilg_l_english.yml
@@ -15,6 +15,8 @@
  PDMN_homeland_idea:0 "Pride in the Homeland"
  PDMN_SWI_out_of_supply_idea:0 "A Bridge Too Far"
  PDMN_MAN_horrified_idea:0 "Horrified by [JAP.GetNameDef]"
+ PDMN_USA_rebel_yell:0 "Rebel Yell!"
+ PDMN_USA_rebel_yell_tt:0 "The scars of the American Civil War are still quite visible in the still-segregated United States. Federal consolidation of power during the second World War and the Great Depression threaten to tear these wounds anew."
  PDMN_denied_help:0 "Assistance Denied"
  PDMN_given_help:0 "Assistance Given"
  PDMN.1.t:0 "Our borders have expanded"
