--- a/localisation/ilg_l_english.yml
+++ b/localisation/ilg_l_english.yml
@@ -13,6 +13,7 @@
  PDMN_political_correctness_idea:0 "Political Correctness"
  PDMN_political_commissars_idea:0 "Political Commissars"
  PDMN_homeland_idea:0 "Pride in the Homeland"
+ PDMN_secessionist:0 "Secessionist"
  PDMN_SWI_out_of_supply_idea:0 "A Bridge Too Far"
  PDMN_MAN_horrified_idea:0 "Horrified by [JAP.GetNameDef]"
  PDMN_USA_rebel_yell:0 "Rebel Yell!"
